<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/score"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="16dp"
    android:padding="16dp"
    android:background="@drawable/bg_circle_radius_primary"
    tools:context=".kuis.SkorActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/hasil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hasil"
        android:textColor="#ffff"
        android:textSize="24sp"
        android:textAlignment="center"
        android:padding="16dp"
        android:layout_marginBottom="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginBottom="10dp"
        android:background="#ffff"
        android:gravity="center">

        <TextView
            android:id="@+id/finalScore"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="fill"
            android:textSize="20sp"
            android:text="@string/grade"/>

    </LinearLayout>

    <Button
        android:id="@+id/buttonRetry"
        android:text="@string/coba_lagi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal" />

</LinearLayout>